2012-01-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist: Add new
	user defaults for sticky app icons and mini windows, respectively.

2011-11-18 Riccardo Mottola <rm@gnu.org>

	* Modules/Themes/no_preview.tiff
	* Modules/Themes/gnustep_preview_128.tiff
	* Modules/Themes/Themes.tiff
	Resampled to 72 dpi

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Volumes/Volumes.m (-mtypeMatrixAction:,
	-mpointButtAction:, -controlTextDidChange:): Improve UI validation
	of the buttons in the Volumes system preferences panel.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Defaults.m (-mainViewDidLoad): Disable
	editing for the description string.

2011-02-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist:
	Add user default that allows placing app icons and mini windows at
	normal window level.

2010-11-24 Riccardo Mottola

	* Modules/Themes/Themes.m:
	removed useless statement and variable.

	* Modules/TimeZone/TimeZone.m:
	Release map to avoid leak.

	* Modules/Fonts/FontModule.m:
	Allocate domain correctly to avoid leaking it.

2010-11-18 Riccardo Mottola

	* Modules/TimeZone/MapView.m
	* PreferencePanes/NSPreferencePane.m:

	Changed return value to NSUInteger to match NSObject

	* Modules/Fonts/FontModule.m
	* Modules/Themes/Themes.m
	* SystemPreferences/main.m:
	Fix memory leak.

2010-10-20 Riccardo Mottola

	* Modules/GNUmakefile
	Build internet module by default and install.

	* Modules/Internet/InternetModule.tiff
	Added icon for the Module (self-created).

2010-10-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Internet/InternetModule.m (-mainViewDidLoad): Select the
	default browser when the module is loaded.

	* Modules/Internet/InternetModule.m (-browserChanged:): Update the
	application with the URL scheme http and eventually https when the
	browser is changed, not any file type associations.

